--- a/package.json
+++ b/package.json
@@ -18,16 +18,18 @@
     "axios": "^1.7.3",
     "classnames": "^2.5.1",
     "date-fns": "^3.6.0",
+    "express": "^4.19.2",
     "geolib": "^3.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
+    "serve": "^14.2.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
