--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-phone-input-2": "^2.15.1",
-    "react-router-dom": "^6.26.0",
+    "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "serve": "^14.2.3",
+    "slugify": "^1.6.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
