--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-google-maps/api": "^2.19.3",
     "@react-oauth/google": "^0.12.1",
+    "@react-spring/web": "^9.7.4",
     "@stripe/react-stripe-js": "^2.7.3",
     "@stripe/stripe-js": "^4.2.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -20,11 +21,18 @@
     "date-fns": "^3.6.0",
     "express": "^4.19.2",
     "geolib": "^3.3.4",
+    "html2canvas": "^1.4.1",
+    "jwt-decode": "^4.0.0",
+    "qr-code-styling": "^1.6.0-rc.1",
+    "qrcode.react": "^3.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-flip-move": "^3.0.5",
     "react-phone-input-2": "^2.15.1",
+    "react-qrcode-logo": "^3.0.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "serve": "^14.2.3",
     "slugify": "^1.6.6",
     "web-vitals": "^2.1.4"
