--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^3.6.0",
     "express": "^4.19.2",
     "geolib": "^3.3.4",
+    "heroku-ssl-redirect": "^0.1.1",
     "html2canvas": "^1.4.1",
     "jwt-decode": "^4.0.0",
     "qr-code-styling": "^1.6.0-rc.1",
